--- a/weatherapp/templates/home.html
+++ b/weatherapp/templates/home.html
@@ -9,134 +9,103 @@
 </head>
 <style>
     * {
-        box-sizing: inherit;
-    }
+    box-sizing: border-box;
+}
 
-    .btn {
-        background: rgba(65, 3, 235, 0.685);
-        color: #fff;
-        border: none;
-        padding: 10px;
-        border-radius: 5px;
-    }
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    
+}
 
-    html {
-        box-sizing: border-box;
-    }
+.content_wrapper {
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: rgba(110, 122, 98, 0.8); /* Background color with opacity */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-    body {
-        font-family: Helvetica;
+h1 {
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
 
-    }
+form {
+    margin-bottom: 20px;
+}
 
+.form-control {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
 
-    .content_wrapper {
-        padding: 3% 0;
-        margin: 0 auto;
-        width: 400px;
-    }
+.btn {
+    background-color: #4285f4;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
 
-    h1 {
-        font-weight: 600;
-        font-size: 30px;
-        margin-bottom: 20px;
-    }
+.weather_card {
+    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-    .weather_card {
-        display: flex;
-        border-radius: 10px;
-        width: 100%;
-        height: 120px;
-        padding: 15px;
-        box-shadow: -5px 5px 15px 5px rgba(150, 150, 150, 0.2);
-    }
+.weather_card_img img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+}
 
-    .weather_card_img {
-        width: calc(120px - 15px);
-        display: flex;
-        background-size: cover;
-        border-radius: 10px;
-        overflow: hidden;
-    }
+.weather_card_infos {
+    flex-grow: 1;
+    padding: 15px;
+}
 
-    .weather_card_state {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        backdrop-filter: blur(2px);
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, .1);
-        color: #fff;
-        font-size: 50px;
-    }
+.weather_card_infos_title {
+    font-size: 18px;
+    font-weight: 600;
+}
 
-    .weather_card_state .material-icons {
-        font-size: 50px;
-    }
+.weather_card_infos_temp {
+    font-size: 24px;
+    font-weight: 600;
+}
 
-    .weather_card_infos {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        padding-left: 15px;
-    }
+.weather_card_infos_bottom {
+    font-size: 14px;
+    color: #666;
+}
 
-    .weather_card_infos_title {
-        font-size: 15px;
-        font-weight: 300;
-        margin-bottom: 10px;
-    }
-
-    .weather_card_infos_temp {
-        font-size: 22px;
-        font-weight: 300;
-        color: rgb(170, 170, 170);
-    }
-
-    .date {
-        margin-top: 5px;
-        font-weight: 300;
-        display: flex;
-        align-items: flex-end;
-        flex-grow: 1;
-        font-size: 12px;
-    }
-
-    hr {
-        width: 100%;
-        height: 1px;
-        background: rgba(100, 100, 100, .2);
-        border: none;
-    }
-
-    .bottom {
-        flex-grow: 1;
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: column;
-    }
-
-    .weather_card_infos_bottom {
-        font-size: 12px;
-        font-weight: 300;
-    }
 </style>
 
-<body>
+<body style="background-image: url('static/bkg.avif'); background-size: cover; background-position: center;">
 
-
+    <div class="content_wrapper" id="app"style="background-image: url('static/bg.jpeg'); background-size: cover; background-position: center;">
     <div class="content_wrapper" id="app">
-        <div v-if="infos.city">
+        <div v-if="infos.city" >
             <h1>
                 Weather
                 <div class="date"></div>
             </h1>
 
             <form method="get">
-                <input class="form-control" name="city">
-                <button class="" type="submit">Submit</button>
-
+                <input class="form-control" name="city" placeholder="Enter city name">
+                <button class="btn" type="submit">Submit</button>
             </form>
 
             <div class="weather_card">
@@ -168,7 +137,7 @@
             </div>
         </div>
     </div>
-
+    </div>
 </body>
 
 </html>
